@@ -3,7 +3,7 @@
 
 #define IrrBP_MAJOR_VERSION 0
 #define IrrBP_MINOR_VERSION 1
-#define IrrBP_REVISION_VERSION 0
+#define IrrBP_REVISION_VERSION 1
 
 #include <btBulletCollisionCommon.h>
 #include <btBulletDynamicsCommon.h>
